--- a/thesis/bitr/eval.tex
+++ b/thesis/bitr/eval.tex
@@ -4,11 +4,13 @@
 Finally, we must judge our system's performance directly, to demonstrate the effectiveness of our ideas in practice.
 \subsection{Metrics}
 \label{subsec:metrics}
-In order to judge the usefulness of our system, we need some way to compute how well \bitr\ reconstructed types on a known compilation. Previous work usually split accuracy and conservatism into separate measures~\cite{tie,sw}. Conservatism here is usually done as a measurement of how often inference is wrong, whether due to a bug or an inherent problem with the system. There have been many different approaches to accuracy measurement. TIE~\cite{tie} used a distance metric based on lattice distance, with inner portions of the type counting less for accuracy. SecondWrite~\cite{sw} reforms this somewhat, defining their pointer recovery accuracy based on detecting the number of indirections. However, their modification still leaves the question of how to evaluate structure correctness unaddressed. REWARDS~\cite{rewards}, as a dynamic system, did take into account the layers of indirection, as REWARDS categorized memory locations in the image. However, REWARDS used a simple notion of correctness, checking whether the types presented for a given piece of memory were equal to the debug type in its entirety.
+In order to judge the usefulness of our system, we need some way to compute how well \bitr\ reconstructed types on a known compilation. Previous work usually split accuracy and conservatism into separate measures~\cite{tie,sw}. Conservatism here is usually done as a measurement of how often inference is wrong, whether due to a bug or an inherent problem with the system.
+There have been multiple different approaches to accuracy measurement.
+TIE~\cite{tie} used a distance metric based on lattice distance, with inner portions of the type counting less for accuracy. SecondWrite~\cite{sw} reforms this somewhat, defining their pointer recovery accuracy based on detecting the number of indirections. However, their modification still leaves the question of how to evaluate structure correctness unaddressed. REWARDS~\cite{rewards}, as a dynamic system, did take into account the layers of indirection, as REWARDS categorized memory locations in the image. However, REWARDS used a simple notion of correctness, checking whether the types presented for a given piece of memory were equal to the debug type in its entirety.
 
 In addition to the differing notions of accuracy and what correct means, there is an issue with the decoupling of the conservatism, accuracy, and precision metrics. When decoupled, non-conservatism resulting in greater apparent accuracy and precision is not necessarily punished in accordance with which type variables non-conservatism occurs on.
 
-Additionally, lattice distance is not a great measurement of accuracy, as simply guessing that all variables are integers of size equal to their storage size is effective on the distance scale. Many variables are integers, and integers are only a short distance away from the pointer type if the type turns out to be pointer-sized, and this is directly at the middle of the top to bottom range. The lattice model further falls apart when we consider the notion of alternative lattices. When comparing two systems, which lattice should measure the distance between types on? Are two systems even comparable anymore? As more work occurs in type reconstruction, having a metric which will allow for the comparison of systems with radically different views of typing will be important.
+Additionally, lattice distance is not a great measurement of accuracy, as simply guessing that all variables are integers of size equal to their storage size is effective on the distance scale. A majority variables are integers, and integers are only a short distance away from the pointer type if the type turns out to be pointer-sized, and this is directly at the middle of the top to bottom range. The lattice model further falls apart when we consider the notion of alternative lattices. When comparing two systems, which lattice should measure the distance between types on? Are two systems even comparable anymore? As more work occurs in type reconstruction, having a metric which will allow for the comparison of systems with radically different views of typing will be important.
 
 We mix the notions of accuracy, conservatism, and precision together into a single metric. We define as our quality metric over a binary:
 \[
@@ -65,7 +67,7 @@ Improvement & 0.78 & 0.93 \\
 
 For a more real-world evaluation, we ran our system over \texttt{coreutils}, a collection of common programs installed on nearly every UNIX system. The programs in \texttt{coreutils} represent a variety of different kinds of workloads, and are open source, so we were readily able to build and examine debug symbols for them. We use this data set to answer this and our remaining questions.
 
-In an effort to demonstrate the validity of our new metric and compare ourselves to systems other than TIE (on which we were able to generate our new metric scoring due to TIE access), we also report statistics of conservatism and distance in the same way as previous work~\cite{tie,sw}. Overall, on \texttt{coreutils} we achieve conservatism of 95.95\% and an average distance of only 1.33. If we only examine type variables which had at least one constraint reference them, we see instead an average distance of 0.68, substantially better than previous work.
+In an effort to demonstrate the validity of our new metric and compare ourselves to systems other than TIE (on which we were able to generate our new metric scoring due to TIE access), we also report statistics of conservatism and distance in the same way as previous work~\cite{tie,sw}. Overall, on \texttt{coreutils} we achieve conservatism of 95.95\% and an average distance of only 1.33. If we only examine type variables which had at least one constraint reference them, we see instead an average distance of 0.68, an improvement on previous work.
 
 \subsection{Is \bitr's recovery good on an absolute scale?}
 Unfortunately, we cannot run most of the other systems under this metric, as implementations are not readily available. However, we did get access to an implementation of TIE~\cite{tie}, so we ran TIE under this new metric in addition to our work. Over all the type information contained in the DWARF information for \texttt{coreutils}, \bitr\ achieved a 21.01\% recovery rate. TIE, when scored on this metric, achieved a 12.65\% rate.
@@ -95,15 +97,15 @@ Dealing with these would be a matter of better heuristics, and would have left t
 
 In order to more closely examine the effect that unconstrained type variables have on our metrics, we generated a probability mass plot of response quality in both situations, as shown in Figure~\ref{fig:unconst}. This shows the
 difference between responses that \bitr\ has constraints on, and those it does not.
-When we restrict ourselves to type variables which the code accessed, causing a constraint to be generated, our recovery rate spikes to 36.78\%, showing great overall improvement.
+When we restrict ourselves to type variables which the code accessed, our recovery rate spikes to 36.78\%, showing great overall improvement.
 
 This makes sense as a measurement because it demonstrates the ability of the tool to police the boundaries of its own knowledge. Specifically, it measures the performance of the tool when used as an advisor rather than as the sole source of types. When \bitr\ has seen the type variable in question constrained, it has a much greater level of information available on what the type could be.
 
 \noindent {\bf Unconstrained Type Variables.}
-The primary source of error reflected in this difference is data that is never written to or read from. For example, while most \texttt{coreutils} binaries contain a \texttt{close\_stream} function which operates on a stream structure, there is no indication of the inner properties of this structure in the code itself. However, the debug symbols are constructed in the presence of header files that describe the fields of the stream structure. As a result, the score is strongly deflated.
+The primary source of error reflected in this difference is data that is never written to or read from. For example, while most \texttt{coreutils} binaries contain a \texttt{close\_stream} function which operates on a stream structure, there is no indication of the inner properties of this structure in the code itself. However, the compiler constructs debugging symbols in the presence of header files that describe the fields of the stream structure. As a result, the score is strongly deflated.
 We can partially mitigate this by using type signatures for library functions, but we did not use signatures for all functions in our experiments, nor would this information always be available.
 While \bitr\ can recover some of these unconstrained variables through appropriate type signing (or analysis of the target shared library), there are also cases where a structure is present, but in the structure's entire life cycle, one of its fields is never referenced.
 
 \subsection{How does \bitr\ scale?}
 \label{subsec:speed}
-It is important to note its scaling characteristics relative to the size of the input problem. Two good proxies for problem size are number of type variables and number of constraints. In practice, in our conjunction of disjunctions, there are about approximately as many disjunctive clauses as there are type variables. \bitr\ experimentally uses an amount of memory linear in both of number of constraints and type variable count, and time proportional to the square. This happens because when checking consistency, the system checks each live type variable rather than only those whose constraints may have changed. Adding an optimization which only checked those type variables affected directly or indirectly by incorporating a new constraint would be expected to replace a factor of $N$ with $K \log N$ by removing the requirement to check every live type variable.
+It is important to note its scaling characteristics relative to the size of the input problem. Two good proxies for problem size are number of type variables and number of constraints. In practice, in our conjunction of disjunctions, there are about approximately the same number of disjunctive clauses as there are type variables. \bitr\ experimentally uses an amount of memory linear in both of number of constraints and type variable count, and time proportional to the square. This happens because when checking consistency, the system checks each live type variable rather than only those whose constraints may have changed. Adding an optimization which only checked those type variables affected directly or indirectly by incorporating a new constraint would replace a factor of $N$ with $K \log N$ by removing the requirement to check every live type variable.
