--- a/thesis/bitr/intro.tex
+++ b/thesis/bitr/intro.tex
@@ -1,5 +1,5 @@
 First, we examine the problem of binary type recovery without Holmes.
-This system was designed prior to Holmes, but gave the inspiration for most of its features, as is shown along the way.
+We designe this system prior to Holmes, but gave the inspiration for most of its features, as we discuss along the way.
 
 \section{Introduction}
 \begin{savenotes}
@@ -29,10 +29,13 @@ Howard & \fyes & \fyes & \fno & \fno & \fyes & Dynamic\\
 \end{savenotes}
 % P
 %   cause of X arises because blah
-Type information is not used by the CPU, and as such, the compiler throws it away during normal compilation. This information has a wide variety of uses, including software verification, reverse engineering, and binary similarity detection. Reverse engineering relies heavily upon the reconstruction of types to make the lifted code comprehensible to a human. Similar data structure use can indicate similar code~\cite{Cozzie}. Knowledge of types can also assist in fuzzing and automated decompilation. All in all, many methods of analyzing binaries post-compilation require some degree of type construction to work properly, and better automated type reconstruction can help with this.
+Type information is not used by the CPU, and as such, the compiler throws it away during normal compilation. This information has a wide variety of uses, including software verification, reverse engineering, and binary similarity detection. Reverse engineering relies heavily upon the reconstruction of types to make the lifted code comprehensible to a human. Similar data structure use can indicate similar code~\cite{Cozzie}. Knowledge of types can also assist in fuzzing and automated decompilation.
+All in all, many methods of analyzing binaries post-compilation require some degree of type construction to work properly, and better automated type reconstruction can help with this.
 
 %   Define X more precisely
-The \emph{binary type reconstruction} problem is: Given a binary program without types, reconstruct the type information that the compiler had at code generation time, but did not emit with the final binary. We specifically focus on C, but hope the techniques can eventually be extended to work on larger classes of languages. Effectively, the goal is to recover an abstraction stripped away by the compiler as it was emitting code. This is distinct from traditional type inference in two important ways: First, even if the code does not have a valid type assignment, it is important to succeed in assigning meaningful types to most variables. Second, operations with the same concrete implementation are not differentiated, e.g. adding numbers vs indexing into an array, and this differentiation must be done during inference.
+The \emph{binary type reconstruction} problem is: Given a binary program without types, reconstruct the type information that the compiler had at code generation time, but did not emit with the final binary.
+We specifically focus on C, but hope that extensions to our techniques can eventually allow them to work on larger classes of languages.
+Effectively, the goal is to recover an abstraction stripped away by the compiler as it was emitting code. This is distinct from traditional type inference in two important ways: First, even if the code does not have a valid type assignment, it is important to succeed in assigning meaningful types to most variables. Second, operations with the same concrete implementation are not differentiated, e.g. adding numbers vs indexing into an array, and this differentiation must occur during inference.
 
 % Previous work does X at a high level.
 Type reconstruction has received increased attention in recent years because it is an important activity for reverse engineering COTS (Commercial Off The Shelf) software. Recent work includes TIE~\cite{tie}, the Hex Rays Decompiler~\cite{ida}, Rewards~\cite{rewards}, and Howard~\cite{Slowinska2011}.  At a high level, the goal of each tool was the same: recover high-level type information from low-level code. However, the scope and fidelity of each tool has varied considerably.
@@ -46,12 +49,12 @@ When reverse engineering, one often wants to look at an area of code first to de
 Unfortunately, current techniques left large amounts of code untyped. In particular, previous work did not infer polymorphic types. In C, these are often implemented by casting to/from \texttt{void*}. Nor did previous techniques infer recursive types, such as linked lists. Specifically, Hex Rays, Rewards, and Howard did not make type inference a central goal, but instead focused on type propagation. TIE \emph{inferred} types in addition to doing propagation. It did this by first accumulating a set of constraints for typing based on how code used and defined variables. Next, the type constraint solver attempted to unify the constraints into a typing solution. The main limitation of TIE was the constraint solver was not powerful enough to include polymorphic or recursive types, and did a poor job coming up with precise answers for structures. 
 
 
-When propagation from sources or sinks cannot determine the type of a register or memory cell, reverse engineering the type comes down to analyzing how the program uses and defines the register, and then finding a typing that is consistent with all uses. The general approach to solving this mechanically is to first formulate a system of constraints from the code, then solve them by some mechanism. There are a large number of ways to approach this: Are variables constrained, or are registers and memory locations? Should aliased operations like pointer arithmetic and addition be represented by intersection-typed functions, or multiple applicable rules? How does the solver prioritize possible branches of a typing to explore?
+When propagation from sources or sinks cannot determine the type of a register or memory cell, reverse engineering the type comes down to analyzing how the program uses and defines the register, and then finding a typing that is consistent with all uses. The general approach to solving this mechanically is to first formulate a system of constraints from the code, then solve them by some mechanism. There are a large number of ways to approach this: Are variables constrained, or are registers and memory locations? Should we represent aliased operations like pointer arithmetic and addition by intersection-typed functions, or multiple applicable rules? How does the solver prioritize possible branches of a typing to explore?
 
 % P
 %   Here is what we call our system
 
-In this chapter we present \bitr, a type recovery system for compiled code that handles the full range of C data types excluding unions. Like TIE, we take a type inference approach where analysis first generates constraints on the types of variables, which are then solved to an upper and lower bound on its type. The main difference is that our constraint solver uses a more powerful constraint and type framework, avoiding issues plaguing previous work. We observed that three main design decisions hampered TIE in particular. First, TIE's constraint solver attempted to brute force a solution to typing constraints. \bitr{} introduces the notion of consistency of constraints, which is used to intelligently prune inconsistent solutions during type resolution.  Second, TIE's use of structure subtyping obscures the link between different pointers in a way that makes it harder for their constraint solving engine to recover structures. Third, TIE required variable recovery before type inference, thus tying overall performance to the variable recovery engine. Often a reverse engineer only wants to know the type of a memory cell, as in Rewards.  In such cases we need not discern the type of every variable. \bitr{} decouples variable recovery from inferring types.
+In this chapter we present \bitr, a type recovery system for compiled code that handles the full range of C data types excluding unions. Like TIE, we take a type inference approach where analysis first generates constraints on the types of variables, which are then solved to an upper and lower bound on its type. The main difference is that our constraint solver uses a more powerful constraint and type framework, avoiding issues plaguing previous work. We observed that three main design decisions hampered TIE in particular. First, TIE's constraint solver attempted to brute force a solution to typing constraints. \bitr{} introduces the notion of consistency of constraints, which we use to intelligently prune inconsistent solutions during type resolution.  Second, TIE's use of structure subtyping obscures the link between different pointers in a way that makes it harder for their constraint solving engine to recover structures. Third, TIE required variable recovery before type inference, thus tying overall performance to the variable recovery engine. Often a reverse engineer only wants to know the type of a memory cell, as in Rewards.  In such cases we need not discern the type of every variable. \bitr{} decouples variable recovery from inferring types.
 
 
   To test our approach, we implemented our techniques in \bitr\ and measured the accuracy of our results. We type approximately twice as many more locations (16.8\% in TIE vs 36.78\% in \bitr), and do so more accurately. Further, we generate types about five times faster than TIE.
