--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -1,5 +1,87 @@
 \chapter{Background}
 \label{chap:background}
+% Binary analysis
+\section{Binary Analysis}
+% * Spiel about how binary analysis is different
+While at its core binary analysis is fundamentally similar to program analysis, we encounter challenges when applying techniques from the program analysis world.
+%   * Abstractions stripped out
+Most of these challenges fall into the category of absent abstraction.
+Function locations, variable locations and bounds, variable types, and control flow graphs are all generally taken for granted even in the analysis of ``low level'' languages such as C, but are absent in binaries.
+
+%   * CFG unknown
+While all of these can cause difficulties, the inability to recover a complete control flow graph can be one of the most difficult to deal with.
+Many algorithms for recovering any of the other missing abstractions depend strongly on having a pre-existing control flow graph\cite{vsa,bddbddb,smash,tie,bitr,wrappedintervals,ramalingam2000}.
+However, without the abstractions present in the source language, determining the potential targets of an indirect (computed) jump becomes difficult, if not impossible.
+Being unsound here by asserting complete knowledge of control flow in cases where only partial knowledge is available can result in unsoundness in every analysis down the road, but frequently use ``good enough'' approximations due to the difficulty of this problem.
+
+%   * Extraordinarily stateful, with large state
+One of the features of functional code that makes it easier to analyze is its thorough reduction of state.
+Traditional procedural/imperative languages make this slightly more difficult through the use of variables, expanding the set of implicit inputs to each step greatly.
+Binary code is yet more difficult to analyze.
+With information about variables, arrays, or inputs, it becomes quickly difficult to determine what parts of memory and registers are really live.
+Due to the lack of scope or lifetime abstractions, once a new piece of state enters an execution, it is rare for it to leave at a later point --- much of the program image in memory is potential state.
+
+\subsection{Control Flow Recovery}
+\label{sec:cfg}
+The goal of control flow recovery is to generate a complete graph of possible program counter transitions in the program while containing minimal number of spurious edges.
+While information from a concrete execution can be useful to the final product (as it contains a series of jumps which the output graph must contain to be correct) it does not allow for the declaration of any control flow graph as complete.
+The simple form of control flow recovery involves performing recursive descent disassembly from a given entry point and watching for a transition to a distinguished exit node (usually via a function return).
+However, indirect jumps due to function pointers, C++ virtual method calls, and even creative compilation of case statements can wreak havoc on this method, since the value of the jump target to is not known ahead of time.
+
+In each of the above cases, the compiler would be able to accurately determine the range of jump targets based on its own code generation information and information present in the source code.
+The type of a C++ object determines a small subset of legal function targets for a given method.
+Switch statements have explicit targets, and so the compiler knows where it might go.
+Function pointers are the most difficult to resolve, but the compiler at least has the ability to restrict the possible targets to functions of the right type, or in a conservative approximation to any function.
+All of these methods are not directly usable on raw compiled code, since compilation stripped the abstractions away.
+
+\subsection{Value Analysis}
+\label{sec:valanal}
+It follows that recovering over-approximations of the range of potential values for pieces of state in a program would be useful.
+One common way to do this is to perform abstract interpretation of the program over a domain designed to model the range of values well~\cite{vsa,wrappedintervals,wrappedintervals2}.
+
+Unfortunately, this abstract interpretation assumes that the control flow graph has already known in order to sequence its transformations.
+Additionally, it can lose nearly all its precision by loops whose transformations are not well represented by its particular domain.
+The state of the art approach to the co-dependence of the control flow recovery and value analysis problems is to combine value analysis with control flow recovery, allowing the creation of new paths from new values, which in turn re-inform the value analysis~\cite{jakstab}.
+
+\subsection{Type Recovery}
+Another important static analysis is type recovery.
+While there is no rule that says there must be types as we think of them in a binary program, they are usually present due to source language or programmer volition.
+Even assembly programmers and dynamic language users~\cite{jsinfer} usually use consistent types to some extent.
+
+Since compilation removed type annotations, there are two primary sources for type information: propagation from API/ABI boundaries and how the program interacts with the structure of the data.
+Propagation~\cite{howard} of type information from code boundaries entails knowing a priori that a particular library or service in use by the program matches some signature, then following definitions of its arguments and uses of its results to annotate the program with this information.
+This helps some, but encounters difficulties with any kind of internal data structure.
+Usage based analysis~\cite{tie,bitr} tends to perform better at recovering internal structures, and works by examining how the code defines and uses state and generating constraints for types based on that.
+
+\input{alias/background}
+
+% * Dynamic
+\subsection{Dynamic Analyses}
+Dynamic analyses are those which focus on properties of individual executions, or statements of the form ``there exists a trace with the property\ldots''.
+These analyses are frequently good at pinpointing problems or increasing the accuracy of approximations.
+However, being path oriented limits these techniques to describing what could happen, rather than what must always be the case.
+
+%   * Fuzzing
+\subsubsection{Fuzzing}
+One common modern way to find issues in code, especially code not in a form intended for human consumption (such as compiled code), is to simply perform a large number of executions with varied inputs.
+This technique is known as ``fuzzing'', and is widely used in the search for security flaws.
+The primary two defining axes of fuzzing are blackbox~\cite{peach,zzuf,rebert2014} vs whitebox~\cite{klee,godefroid2008,avgerinos2014} and generational~\cite{peach} vs mutational~\cite{zzuf}.
+
+%   * Symbolic Execution + SMT
+\subsubsection{Symbolic Execution}
+A slightly more sophisticated (though more expensive) approach is to keep inputs ``symbolic'' while executing.
+Essentially, if an exact value is not needed in order to take a step, the evaluator uses expressions based on inputs in place of concrete values.
+When a the evaluator encounters a conditional branch, it extends path constraint by conjunction with the condition, restricting the range of feasible inputs for this execution.
+When the next instruction is a potentially dangerous operation (such as jumping to or dereferencing a symbolic value), an SMT solver can check a formula for the plausibility of the ``bad'' scenario\footnote{\
+  SMT stands for Satisfiability Modulo Theory.
+  It is a SAT solver whose variables have extra domains and additional operations.
+  The SMT solvers discussed here operate over the theory of bitvectors.
+}.
+The execution engine constructs the formula by taking the conjunction of the path constraint with whatever condition suffices to cause the badly behaved event.
+If the SMT solver returns a solution, that solution describes a bug-causing input\cite{aeg,mayhem}.
+If instead of simply sufficing, the condition passed is complete (i.e.\ the operation is \emph{only} dangerous if the formula is satisfiable), the SMT solver returning UNSAT gives safety, but for \emph{this path only}.
+Since loops may create an infinite number of paths, it is difficult to demonstrate that any region is safe this way, but receiving a concrete trace which exercises a bug condition is a major benefit.
+
 % Logic Language
 \section{Logic Language}
 Logic languages are a family of declarative programming languages which express computation as a series of rules used to derive a conclusion.
@@ -270,90 +352,4 @@ There is no way to derive that $\id{y}$ is circular, or failing that, that it is
 Circumscribing over both $\pred{square}{\cdot}$ and $\pred{silver}$ in the system allows us to derive $\neg \pred{square}{\id{y}}$ and $\neg \pred{silver}{\id{y}}$.
 In this way, circumscription forms the basis for the form of negation present in logic languages.
 
-% Binary analysis
-\section{Binary Analysis}
-% * Spiel about how binary analysis is different
-While at its core binary analysis is fundamentally similar to program analysis, we encounter challenges when applying techniques from the program analysis world.
-%   * Abstractions stripped out
-Most of these challenges fall into the category of absent abstraction.
-Function locations, variable locations and bounds, variable types, and control flow graphs are all generally taken for granted even in the analysis of ``low level'' languages such as C, but are absent in binaries.
 
-%   * CFG unknown
-While all of these can cause difficulties, the inability to recover a complete control flow graph can be one of the most difficult to deal with.
-Many algorithms for recovering any of the other missing abstractions depend strongly on having a pre-existing control flow graph\cite{vsa,bddbddb,smash,tie,bitr,wrappedintervals,ramalingam2000}.
-However, without the abstractions present in the source language, determining the potential targets of an indirect (computed) jump becomes difficult, if not impossible.
-Being unsound here by asserting complete knowledge of control flow in cases where only partial knowledge is available can result in unsoundness in every analysis down the road, but frequently use ``good enough'' approximations due to the difficulty of this problem.
-
-%   * Extraordinarily stateful, with large state
-One of the features of functional code that makes it easier to analyze is its thorough reduction of state.
-Traditional procedural/imperative languages make this slightly more difficult through the use of variables, expanding the set of implicit inputs to each step greatly.
-Binary code is yet more difficult to analyze.
-With information about variables, arrays, or inputs, it becomes quickly difficult to determine what parts of memory and registers are really live.
-Due to the lack of scope or lifetime abstractions, once a new piece of state enters an execution, it is rare for it to leave at a later point --- much of the program image in memory is potential state.
-
-% * Static
-\subsection{Static Analyses}
-%   * What is static?
-Static analyses are those which focus on deriving information from the structure of the complete program.
-While not a hard and fast rule, these analyses usually operate on a majority or all execution paths through the program.
-
-\subsubsection{Control Flow Recovery}
-\label{sec:cfg}
-The goal of control flow recovery is to generate a complete graph of possible program counter transitions in the program while containing minimal number of spurious edges.
-While information from a concrete execution can be useful to the final product (as it contains a series of jumps which the output graph must contain to be correct) it does not allow for the declaration of any control flow graph as complete.
-The simple form of control flow recovery involves performing recursive descent disassembly from a given entry point and watching for a transition to a distinguished exit node (usually via a function return).
-However, indirect jumps due to function pointers, C++ virtual method calls, and even creative compilation of case statements can wreak havoc on this method, since the value of the jump target to is not known ahead of time.
-
-In each of the above cases, the compiler would be able to accurately determine the range of jump targets based on its own code generation information and information present in the source code.
-The type of a C++ object determines a small subset of legal function targets for a given method.
-Switch statements have explicit targets, and so the compiler knows where it might go.
-Function pointers are the most difficult to resolve, but the compiler at least has the ability to restrict the possible targets to functions of the right type, or in a conservative approximation to any function.
-All of these methods are not directly usable on raw compiled code, since compilation stripped the abstractions away.
-
-\subsubsection{Value Analysis}
-\label{sec:valanal}
-It follows that recovering over-approximations of the range of potential values for pieces of state in a program would be useful.
-One common way to do this is to perform abstract interpretation of the program over a domain designed to model the range of values well~\cite{vsa,wrappedintervals,wrappedintervals2}.
-
-Unfortunately, this abstract interpretation assumes that the control flow graph has already known in order to sequence its transformations.
-Additionally, it can lose nearly all its precision by loops whose transformations are not well represented by its particular domain.
-The state of the art approach to the co-dependence of the control flow recovery and value analysis problems is to combine value analysis with control flow recovery, allowing the creation of new paths from new values, which in turn re-inform the value analysis~\cite{jakstab}.
-
-\subsubsection{Type Recovery}
-Another important static analysis is type recovery.
-While there is no rule that says there must be types as we think of them in a binary program, they are usually present due to source language or programmer volition.
-Even assembly programmers and dynamic language users~\cite{jsinfer} usually use consistent types to some extent.
-
-Since compilation removed type annotations, there are two primary sources for type information: propagation from API/ABI boundaries and how the program interacts with the structure of the data.
-Propagation~\cite{howard} of type information from code boundaries entails knowing a priori that a particular library or service in use by the program matches some signature, then following definitions of its arguments and uses of its results to annotate the program with this information.
-This helps some, but encounters difficulties with any kind of internal data structure.
-Usage based analysis~\cite{tie,bitr} tends to perform better at recovering internal structures, and works by examining how the code defines and uses state and generating constraints for types based on that.
-
-% * Dynamic
-\subsection{Dynamic Analyses}
-Dynamic analyses are those which focus on properties of individual executions, or statements of the form ``there exists a trace with the property\ldots''.
-These analyses are frequently good at pinpointing problems or increasing the accuracy of approximations.
-However, being path oriented limits these techniques to describing what could happen, rather than what must always be the case.
-
-%   * Fuzzing
-\subsubsection{Fuzzing}
-One common modern way to find issues in code, especially code not in a form intended for human consumption (such as compiled code), is to simply perform a large number of executions with varied inputs.
-This technique is known as ``fuzzing'', and is widely used in the search for security flaws.
-The primary two defining axes of fuzzing are blackbox~\cite{peach,zzuf,rebert2014} vs whitebox~\cite{klee,godefroid2008,avgerinos2014} and generational~\cite{peach} vs mutational~\cite{zzuf}.
-
-%   * Symbolic Execution + SMT
-\subsubsection{Symbolic Execution}
-A slightly more sophisticated (though more expensive) approach is to keep inputs ``symbolic'' while executing.
-Essentially, if an exact value is not needed in order to take a step, the evaluator uses expressions based on inputs in place of concrete values.
-When a the evaluator encounters a conditional branch, it extends path constraint by conjunction with the condition, restricting the range of feasible inputs for this execution.
-When the next instruction is a potentially dangerous operation (such as jumping to or dereferencing a symbolic value), an SMT solver can check a formula for the plausibility of the ``bad'' scenario\footnote{\
-  SMT stands for Satisfiability Modulo Theory.
-  It is a SAT solver whose variables have extra domains and additional operations.
-  The SMT solvers discussed here operate over the theory of bitvectors.
-}.
-The execution engine constructs the formula by taking the conjunction of the path constraint with whatever condition suffices to cause the badly behaved event.
-If the SMT solver returns a solution, that solution describes a bug-causing input\cite{aeg,mayhem}.
-If instead of simply sufficing, the condition passed is complete (i.e.\ the operation is \emph{only} dangerous if the formula is satisfiable), the SMT solver returning UNSAT gives safety, but for \emph{this path only}.
-Since loops may create an infinite number of paths, it is difficult to demonstrate that any region is safe this way, but receiving a concrete trace which exercises a bug condition is a major benefit.
-
-\input{alias/background}
